# CocktailBerry-Stats

./: .flake8  .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  streamlit_app.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/ISSUE_TEMPLATE/workflows/: build-docker.yml
.github/workflows/: build-docker.yml  linting.yml  manual-docker.yml
backend/: .dockerignore  .env.example  .spaceignore  Dockerfile  Spacefile  app.py  docker-compose.yml  environment.py  log_config.yaml  main.py  models.py  pyproject.toml  requirements.txt  routes.py  schemas.py  security.py  utils.py
backend/core/: logging.py  metadata.py
docs/: devnots.md
docs/diagrams/: Schema.puml
frontend/: .env.example  aggregations.py  data.py  main.py  models.py  plots.py  requirements.txt  streamlit_app.py  style.css  styles.py  utils.py  views.py
frontend/assets/: cbmk2.jfif
frontend/templates/: index.html
frontend/views/: __init__.py  api.py  data.py  dev.py  footer.py  introduction.py  machine.py  sidebar.py
