[project]
name = "cocktailberry-webapp"
version = "1.3.0"
description = "WebApp with API and endpoint for CocktailBerry. Have insights into made cocktails."
authors = [{name="Andre Wohnsland", email="<50302161+AndreWohnsland@users.noreply.github.com>"}]
license = "MIT"
dependencies = [
    "beanie>=1.29.0",
    "fastapi>=0.115.12",
    "fastapi-utilities>=0.3",
    "motor[srv]>=3.7.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "st-theme>=1.2.3",
    "streamlit>=1.44.1",
    "uvicorn>=0.34.2",
]
requires-python = ">=3.12"

[tool.uv]
dev-dependencies = [
    "jupyterlab>=4.3.4",
    "mypy>=1.15.0",
    "ruff>=0.9.1",
]

[tool.flake8]
max-line-length = 120
extend-ignore = "E402"

[tool.ruff]
# don't check import order in the migration script
line-length = 120
exclude = ["ui_elements", "addon_skeleton"]
target-version = "py312"

[tool.ruff.lint]
extend-safe-fixes = [
  "UP", # pyupgrade
  "D107", # Missing docstring in __init__
  "D205", # 1 blank line required between summary line and description
  "W291", # Trailing whitespace
  ]
per-file-ignores = { "runme.py" = ["E402"], "migrator.py" = ["E402"] }
select = [
  "C", # Convention
  "D", # pydocstyle 
  "E", # pycodestyle
  "F", # Pyflakes
  "I", # isort 
  "ICN001", # {name} should be imported as {asname},
  "R", # Refactor
  "RUF", # Ruff
  "SIM", # flake8-simplify
  "UP", # pyupgrade
  "W", # Pylint (Warning)
]
ignore = [
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D102", # Missing docstring in public method
  "D103",  # Missing docstring in public function
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  "D107", # Missing docstring in __init__
  "D203", # 1 blank line required before class docstring
  "D213", # Multi-line docstring summary should start at the second line
]

[tool.mypy]
disable_error_code = ["annotation-unchecked", "import-untyped"]

[tool.pylint]
disable = ["C0301", "C0114", "C0115", "C0116", "R0912"]
max-line-length = 120

[tool.autopep8]
max-line-length = 120
ignore = ["E402"]

