[project]
name = "cocktailberry-webapp"
version = "1.4.1"
description = "WebApp with API and endpoint for CocktailBerry. Have insights into made cocktails."
authors = [{name="Andre Wohnsland", email="<50302161+AndreWohnsland@users.noreply.github.com>"}]
license = "MIT"
requires-python = ">=3.13"

dependencies = [
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.6",
    "mypy>=1.17.1",
    "ruff>0.12.10",
]

[tool.uv.workspace]
members = ["backend"]

[tool.flake8]
max-line-length = 120
extend-ignore = "E402"

[tool.ruff]
# don't check import order in the migration script
line-length = 120
exclude = ["ui_elements", "addon_skeleton"]
target-version = "py312"

[tool.ruff.lint]
extend-safe-fixes = [
  "UP", # pyupgrade
  "D107", # Missing docstring in __init__
  "D205", # 1 blank line required between summary line and description
  "W291", # Trailing whitespace
  ]
per-file-ignores = { "runme.py" = ["E402"], "migrator.py" = ["E402"] }
select = [
  "C", # Convention
  "D", # pydocstyle 
  "E", # pycodestyle
  "F", # Pyflakes
  "I", # isort 
  "ICN001", # {name} should be imported as {asname},
  "R", # Refactor
  "RUF", # Ruff
  "SIM", # flake8-simplify
  "UP", # pyupgrade
  "W", # Pylint (Warning)
]
ignore = [
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D102", # Missing docstring in public method
  "D103",  # Missing docstring in public function
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  "D107", # Missing docstring in __init__
  "D203", # 1 blank line required before class docstring
  "D213", # Multi-line docstring summary should start at the second line
]

[tool.mypy]
disable_error_code = ["annotation-unchecked", "import-untyped"]

[tool.pylint]
disable = ["C0301", "C0114", "C0115", "C0116", "R0912"]
max-line-length = 120

[tool.autopep8]
max-line-length = 120
ignore = ["E402"]

