[project]
name = "cocktailberry-webapp"
version = "1.5.0"
description = "WebApp with API and endpoint for CocktailBerry. Have insights into made cocktails."
authors = [{name="Andre Wohnsland", email="<50302161+AndreWohnsland@users.noreply.github.com>"}]
license = "MIT"
requires-python = ">=3.13,<3.14"

dependencies = [
    "pandas>=2.3.3,<3",
    "plotly>=6.5.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit>=1.53.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.2",
    "mypy>=1.19.1",
    "ruff>=0.14.13",
]

[tool.uv]
override-dependencies = [
    "pyarrow>=22.0.0",
    "rpds-py>=0.30.0"
]

[tool.uv.workspace]
members = ["backend"]

[tool.flake8]
max-line-length = 120
extend-ignore = "E402"

[tool.ruff]
# don't check import order in the migration script
line-length = 120
exclude = ["ui_elements", "addon_skeleton"]
target-version = "py312"

[tool.ruff.lint]
extend-safe-fixes = [
  "UP", # pyupgrade
  "D107", # Missing docstring in __init__
  "D205", # 1 blank line required between summary line and description
  "W291", # Trailing whitespace
  ]
per-file-ignores = { "runme.py" = ["E402"], "migrator.py" = ["E402"] }
select = [
  "A", # flake8-builtins
  "ANN", # Type annotations
  "C", # Convention
  "C4", # flake-comprehensions
  "D", # pydocstyle 
  "E", # pycodestyle
  "F", # Pyflakes
  "FAST", # FastAPI
  "I", # isort 
  "ICN001", # {name} should be imported as {asname},
  "PIE", # flake8-pie
  "PL", # pylint
  "PTH", # flake8-use-pathlib
  "PYI", # flake8-pyi
  "Q", # flake8-quotes
  "R", # Refactor
  "RET", # flake8-return
  "RUF", # Ruff
  "SIM", # flake8-simplify
  "UP", # pyupgrade
  "W", # Pylint (Warning)
]
ignore = [
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D102", # Missing docstring in public method
  "D103",  # Missing docstring in public function
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  "D107", # Missing docstring in __init__
  "D203", # 1 blank line required before class docstring
  "D213", # Multi-line docstring summary should start at the second line
  "ANN401", # no Any for *args or **kwargs
  "PLR0913", # Too many arguments
  "PLC0415", # `import` should be at the top-level of a file
]

[tool.mypy]
disable_error_code = ["annotation-unchecked", "import-untyped"]

[tool.pylint]
disable = ["C0301", "C0114", "C0115", "C0116", "R0912"]
max-line-length = 120

[tool.autopep8]
max-line-length = 120
ignore = ["E402"]

