[project]
name = "backend"
version = "1.0.0"
description = "Backend service for CocktailBerry WebApp"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "beanie>=2.0.0",
    "fastapi>=0.116.1",
    "fastapi-utilities>=0.3.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "slowapi>=0.1.9",
    "uvicorn>=0.35.0",
]
