[project]
name = "backend"
version = "1.0.0"
description = "Backend service for CocktailBerry WebApp"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "beanie>=2.0.1",
    "fastapi>=0.128.0",
    "fastapi-utilities>=0.3.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "slowapi>=0.1.9",
    "uvicorn>=0.40.0",
]
